added-contact-page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a class="nav-link text-black fw-bold ms-4" href="#"
                   >About Us</a
                 >
-                <a class="nav-link text-black fw-bold ms-4" href="#"
+                <a class="nav-link text-black fw-bold ms-4" href="/contact.html"
                   >Contact Us</a
                 >
                 <a class="nav-link text-black fw-bold ms-4" href="#"
