contact-form-submit-message-added-and-completed-the-project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       type="image/x-icon"
     />
     <!-- Custom-Css-link -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
 
   <body>
@@ -55,7 +55,7 @@
                 <a
                   class="nav-link text-black active fw-bold ms-4"
                   aria-current="page"
-                  href="#"
+                  href="/"
                   >Home</a
                 >
                 <a class="nav-link text-black fw-bold ms-4" href="#">Course</a>
