--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Digital Learning</title>
-    <link rel="stylesheet" href="contact.css" />
     <link
-      href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      id="bootstrap-css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
     />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Fontawesome-link -->
+    <script
+      src="https://kit.fontawesome.com/c8b3b2b8c5.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- favicon-link -->
+    <link
+      rel="shortcut icon"
+      href="images/favicon/favicon.png"
+      type="image/x-icon"
+    />
+    <!-- Custom-Css-link -->
+    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="CSS/contact.css" />
   </head>
+
   <body>
+    <header>
+      <section class="container mb-5">
+        <!-- nav-section-start -->
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
+          <div class="container">
+            <div class="w-25">
+              <h3 class="navbar-brand fw-bolder text-primary" href="#">
+                <a href="/" style="text-decoration: none">Digital Learning</a>
+              </h3>
+            </div>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div
+              class="collapse navbar-collapse justify-content-end"
+              id="navbarNavAltMarkup"
+            >
+              <div class="navbar-nav">
+                <a
+                  class="nav-link text-black active fw-bold ms-4"
+                  aria-current="page"
+                  href="/"
+                  >Home</a
+                >
+                <a class="nav-link text-black fw-bold ms-4" href="#">Course</a>
+                <a class="nav-link text-black fw-bold ms-4" href="#">Deals</a>
+                <a class="nav-link text-black fw-bold ms-4" href="#">Success</a>
+                <a class="nav-link text-black fw-bold ms-4" href="#"
+                  >About Us</a
+                >
+                <a class="nav-link text-black fw-bold ms-4" href="/contact.html"
+                  >Contact Us</a
+                >
+                <a class="nav-link text-black fw-bold ms-4" href="#"
+                  >Register</a
+                >
+              </div>
+            </div>
+          </div>
+        </nav>
+        <!-- nav-section-end -->
+      </section>
+    </header>
+    <!-- form section start -->
     <div class="container contact-form">
       <div class="contact-image">
         <img
@@ -22,33 +86,35 @@
           alt="rocket_contact"
         />
       </div>
-      <form method="post">
+      <form action="https://formsubmit.co/695a1f212dbc76508fc463fe643c8884" method="POST">
         <h3>Drop Us a Message</h3>
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
               <input
                 type="text"
-                name="txtName"
-                class="form-control"
+                name="name"
+                class="form-control mb-3"
                 placeholder="Your Name *"
                 value=""
+                required
               />
             </div>
             <div class="form-group">
               <input
-                type="text"
-                name="txtEmail"
-                class="form-control"
+                type="email"
+                name="email"
+                class="form-control mb-3"
                 placeholder="Your Email *"
                 value=""
+                required
               />
             </div>
             <div class="form-group">
               <input
-                type="text"
-                name="txtPhone"
-                class="form-control"
+                type="number"
+                name="phone"
+                class="form-control mb-3"
                 placeholder="Your Phone Number *"
                 value=""
               />
@@ -68,6 +134,7 @@
                 name="txtMsg"
                 class="form-control"
                 placeholder="Your Message *"
+                required
                 style="width: 100%; height: 150px"
               ></textarea>
             </div>
@@ -75,5 +142,57 @@
         </div>
       </form>
     </div>
+    <!-- form section end -->
+
+    <!-- Footer-section-start -->
+    <footer class="text-center bg-black text-white py-5 pt-5">
+      <div class="footer-container">
+        <h2 class="fw-semibold text-white mb-2">Digital Learning</h2>
+        <p class="text-white-50">
+          1800 Massachusetts Ave. NW, Suite 200 <br />
+          Washington DC 20036
+        </p>
+        <p class="text-white-50">Privacy Ploicy | Terms of use</p>
+      </div>
+      <div class="social-icon">
+        <a href="https://www.facebook.com/clutch.co"
+          ><i
+            class="fa-brands fa-facebook text-white-50 mx-2"
+            style="font-size: 30px"
+          ></i
+        ></a>
+        <a href="https://twitter.com/clutch_co"
+          ><i
+            class="fa-brands fa-twitter text-white-50 mx-2"
+            style="font-size: 30px"
+          ></i
+        ></a>
+        <a href="https://www.linkedin.com/company/clutch-co"
+          ><i
+            class="fa-brands fa-linkedin text-white-50 mx-2"
+            style="font-size: 30px"
+          ></i
+        ></a>
+        <a href="https://www.instagram.com/clutchco_official"
+          ><i
+            class="fa-brands fa-instagram text-white-50 mx-2"
+            style="font-size: 30px"
+          ></i
+        ></a>
+        <a href="https://github.com/jubayer44/"
+          ><i
+            class="fa-brands fa-github text-white-50 mx-2"
+            style="font-size: 30px"
+          ></i
+        ></a>
+      </div>
+    </footer>
+    <!-- Footer-section-end -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
