--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
       </section>
     </header>
     <!-- form section start -->
-    <div class="container contact-form">
+    <div class="container contact-form pt-5">
       <div class="contact-image">
         <img
           src="https://image.ibb.co/kUagtU/rocket_contact.png"
@@ -119,14 +119,7 @@
                 value=""
               />
             </div>
-            <div class="form-group">
-              <input
-                type="submit"
-                name="btnSubmit"
-                class="btnContact bg-primary"
-                value="Send Message"
-              />
-            </div>
+            
           </div>
           <div class="col-md-6">
             <div class="form-group">
@@ -138,6 +131,15 @@
                 style="width: 100%; height: 150px"
               ></textarea>
             </div>
+          </div>
+          <div class="form-group">
+            <input
+              type="submit"
+              name="btnSubmit"
+              class="btnContact bg-primary mt-2 mt-md-0"
+              value="Send Message"
+              style="width: 100%;"
+            />
           </div>
         </div>
       </form>
