--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="bg-black rounded-4">
                   <img
                     style="max-height: 75vh"
-                    src="images/cover/cover-1.png"
+                    src="https://i.ibb.co/WfPh2WP/cover-1.png"
                     class="d-block w-100 opacity-50 rounded-4"
                     alt="..."
                   />
@@ -108,7 +108,7 @@
                 <div class="bg-black rounded-4">
                   <img
                     style="max-height: 75vh"
-                    src="images/cover/cover-2.png"
+                    src="https://i.ibb.co/jwMgBFV/cover-2.png"
                     class="d-block w-100 opacity-50 rounded-4"
                     alt="..."
                   />
@@ -128,7 +128,7 @@
                 <div class="bg-black rounded-4">
                   <img
                     style="max-height: 75vh"
-                    src="images/cover/cover-3.jpg"
+                    src="https://i.ibb.co/2syBP6Q/cover-3.jpg"
                     class="d-block w-100 opacity-50 rounded-4"
                     alt="..."
                   />
@@ -206,7 +206,7 @@
             <div class="row g-0">
               <div class="col-12 col-md-6">
                 <img
-                  src="images/working.png"
+                  src="https://i.ibb.co/D5z245F/working.png"
                   class="img-fluid rounded-start"
                   alt="..."
                 />
