resolved-page-error

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="container">
             <div class="w-25">
               <h3 class="navbar-brand fw-bolder text-primary" href="#">
-                <a href="/" style="text-decoration: none">Digital Learning</a>
+                <a href="index.html" style="text-decoration: none">Digital Learning</a>
               </h3>
             </div>
             <button
@@ -55,7 +55,7 @@
                 <a
                   class="nav-link text-black active fw-bold ms-4"
                   aria-current="page"
-                  href="/"
+                  href="index.html"
                   >Home</a
                 >
                 <a class="nav-link text-black fw-bold ms-4" href="#">Course</a>
@@ -64,7 +64,7 @@
                 <a class="nav-link text-black fw-bold ms-4" href="#"
                   >About Us</a
                 >
-                <a class="nav-link text-black fw-bold ms-4" href="/contact.html"
+                <a class="nav-link text-black fw-bold ms-4" href="contact.html"
                   >Contact Us</a
                 >
                 <a class="nav-link text-black fw-bold ms-4" href="#"
